@@ -1,3 +1,14 @@
+2010-12-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-temp-buffer-file-name): Make it permanent-local.
+	(tramp-handle-insert-file-contents): Do not set permanent-local
+	property.
+	(tramp-action-password): Delete region, do not narrow.
+	(tramp-process-actions): Do not widen.
+
+	* tramp-sh.el (tramp-handle-start-file-process): Protect
+	buffer-modified value.  (Bug#7557)
+
 2010-12-03  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-methods): Add "ksu".
